--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,9 @@
 baseURL = "https://afolabi.cloudhaven.work"
-title = "Afolabi — Build Log & Bragsite"
+title = "Cloudhaven"
 theme = "PaperMod"
+
+[markup.goldmark.renderer]
+  unsafe = true
 
 [pagination]
   pagerSize = 20
@@ -12,37 +15,45 @@ buildFuture   = false
 buildExpired  = false
 
 [params]
-  defaultTheme      = "auto"
-  ShowReadingTime   = true
-  ShowPostNavLinks  = true
-  # Optional: if you only want tags discoverable via Search and
-  # not on individual post pages, uncomment the next line to hide them.
-  # hidePostTags = true  # (custom CSS needed; I can add it if you want)
+  ShowBreadCrumbs = false
+  ShowPostNavLinks = false
+  ShowReadingTime = false
+  ShowCodeCopyButtons = true
+
+  ShowPostsOnHomePage = false
+  defaultTheme = "light"
+  disableThemeToggle = true
 
   [params.profileMode]
-    enabled     = true
+    enabled     = false
     title       = "Hi, I'm Afolabi 👋"
-    subtitle    = "AI/DevOps/SRE • Building Cloudhaven "
+    subtitle    = "AI/DevOps/SRE • Building Cloudhaven"
     imageUrl    = "img/image0.jpg"
     imageTitle  = "Afolabi headshot"
     imageWidth  = 300
     imageHeight = 300
 
-  [[params.profileMode.buttons]]
-    name = "Resume"
-    url  = "/resume/"
+  [params.label]
+  text = ""                      # leave empty if you want only the icon
+  icon = "icons/logo.png"        # file at static/icons/logo.png
+  iconHeight = 28
 
-  [[params.profileMode.buttons]]
-    name = "Blog"
-    url  = "/posts/"
 
-  [[params.socialIcons]]
-    name = "github"
-    url  = "https://github.com/Cloudhaven-IDP"
+  # [[params.profileMode.buttons]]
+  #   name = "Resume"
+  #   url  = "/resume/"
 
-  [[params.socialIcons]]
-    name = "linkedin"
-    url  = "https://www.linkedin.com/in/afolabifaj/"
+  # [[params.profileMode.buttons]]
+  #   name = "Blog"
+  #   url  = "/posts/"
+
+  # [[params.socialIcons]]
+  #   name = "github"
+  #   url  = "https://github.com/Cloudhaven-IDP"
+
+  # [[params.socialIcons]]
+  #   name = "linkedin"
+  #   url  = "https://www.linkedin.com/in/afolabifaj/"
 
 # Only menu items we want
 [[menu.main]]
